--- a/style.css
+++ b/style.css
@@ -14,34 +14,45 @@ body {
   width: 300px;
 }
 
-.container {
-  background-color: #f5f5f5;
+.add-border {
   border-color: #d1d1d1;
   border-style: solid;
   border-width: 1px;
+}
+
+.container {
+  background-color: #f5f5f5;
   position: relative;
 }
 
 .container-inner {
-  padding-left: 15px;
+  padding: 0 23px;
 }
 
 .cell-item {
-  padding: 6px;
+  padding: 8px;
 }
 
-.number {
-  padding: 3px 4px;
-  border: 2px solid red;
+.adjust-number {
   background-color: white;
+  display: block;
+  padding: 5px;
+  width: 35px;
+  background-color: white;
+  text-align: right;
 }
 
 .currency {
   color: #555;
+  padding-left: 2px;
+  padding-right: 10px;
 }
 
 .icon {
-  padding: 0 5px;
+  padding: 0 6px 0 10px;
+  font-weight: bold;
+  font-size: 0.8em;
+  color: #555;
 }
 
 #header {
