--- a/style.css
+++ b/style.css
@@ -33,12 +33,21 @@ body {
 }
 
 .container-inner {
-  padding: 0 15px;
-  margin-top: -10px;
+  padding: 0 9px;
+  margin-top: 20px;
 }
 
 .cell-item {
+  text-align: left;
   padding: 8px 0;
+}
+
+.icon {
+  text-align: center;
+}
+
+.balance {
+  text-align: right;
 }
 
 .adjust-number {
@@ -59,13 +68,6 @@ body {
 .crypto-img {
   display: inline;
   width: 40px;
-}
-
-.icon {
-  padding: 0 6px 0 10px;
-  /*font-weight: bold;*/
-  font-size: 1.4em;
-  color: #555;
 }
 
 #header {
