--- a/style.css
+++ b/style.css
@@ -14,6 +14,13 @@ body {
   width: 350px;
 }
 
+.banner-rates {
+  display: inline;
+  position: absolute;
+  top: 80px;
+  left: -2px;
+}
+
 .table {
   background-color: white;
   border: 1px solid #dae1e9;
@@ -39,7 +46,9 @@ body {
 
 .cell-item {
   text-align: left;
+  font-size: 16px;
   padding: 8px 0;
+  cursor: pointer;
 }
 
 .icon {
@@ -73,11 +82,12 @@ body {
 #header {
   display: block;
   text-align: left;
-  height: 55px;
   width: 100%;
-  margin: auto;
-  padding-top: 10px;
+  padding: 1.3em 20px 1.2em;
   background-color: #0667d0;
+  position: absolute;
+  left: 0px;
+  top: 0px;
 }
 
 #header .title {
