--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
 
 .table {
   padding-top: 12px;
+  padding-bottom: 12px;
   width: 100%;
   background-color: white;
   border: 1px solid #dae1e9;
