--- a/style.css
+++ b/style.css
@@ -84,8 +84,8 @@ body {
   padding: 5px 0;
 }
 
-#input,
-#rate {
+.input,
+.rate {
   width: 30px;
   text-align: right;
 }
@@ -126,6 +126,13 @@ body {
   border: unset;
   background-color: inherit;
   font-size: 1.7em;
+}
+
+table,
+tr {
+  border-collapse: collapse;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
 }
 
 .brdr-top {
