--- a/style.css
+++ b/style.css
@@ -42,7 +42,12 @@ body {
 .base-currency-txt {
   font-size: 0.9em;
   padding-right: 20px;
+  margin: 0 auto;
   text-align: right;
+}
+
+.result-txt {
+  padding-right: 5px;
 }
 
 .base-currency-value {
@@ -70,8 +75,14 @@ tr {
   border-collapse: collapse;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
+  margin: 0 auto;
+}
+
+.table-row-subtitle {
+  height: 2.3em;
+  vertical-align: middle;
 }
 
 .table-row {
-  height: 3.6em;
+  height: 3em;
 }
