--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   margin: auto;
   padding: 0;
   width: 375px;
+  min-height: 600px;
   font-size: 18px;
   text-align: center;
   color: #4e5c6e;
@@ -13,8 +14,67 @@ p {
   margin: auto 5px;
 }
 
+/*log in screen*/
+
+.login-content {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  padding: 0;
+}
+
+.content-container {
+  width: 60%;
+  margin: auto;
+  padding: 0;
+  position: absolute;
+  top: 38%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.login-icon {
+  display: block;
+  margin: auto;
+  margin-bottom: 50px;
+  width: 60%;
+}
+
+.login-button {
+  display: block;
+  margin: auto;
+  padding: 0.7em 1em 0.8em;
+  font-size: 15px;
+  color: #fff;
+  background-color: #3c90df;
+  border: 1px solid rgb(46, 123, 196);
+  border-radius: 4px;
+  transition: background-color 0.25s ease;
+}
+
+.login-button:hover {
+  background-color: rgb(46, 123, 196);
+  transition: background-color 0.25s ease;
+}
+
+.madeby {
+  margin: auto;
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 15px;
+}
+
+.madeby a {
+  color: #0667d0;
+  text-decoration: none;
+}
+
+/*rates page*/
+
 .header {
-  padding: 1.1em 0 1.1em;
+  padding: 0.8em 0 0.8em;
   background-color: #0667d0;
 }
 
