--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ p {
   color: #fff;
   background-color: #3c90df;
   border: 1px solid rgb(46, 123, 196);
+  text-decoration: none;
   border-radius: 4px;
   transition: background-color 0.25s ease;
 }
@@ -74,8 +75,8 @@ p {
 /*rates page*/
 
 .header {
-  padding: 0.8em 0 0.8em;
-  background-color: #0667d0;
+  padding: 0.9em 0 1em;
+  background-color: rgb(46, 123, 196);
 }
 
 .title {
