--- a/style.css
+++ b/style.css
@@ -2,36 +2,14 @@ body {
   margin: auto;
   padding: 0;
   width: 375px;
-  min-height: 600px;
-  font-size: 18px;
-  text-align: center;
-  color: #4e5c6e;
-  background-color: #eee;
+  min-height: 540px;
+  font-size: 17px;
+  overflow: hidden;
 }
 
-p {
-  display: inline;
-  margin: auto 5px;
-}
-
-/*log in screen*/
-
-.login-content {
-  width: 100%;
-  height: 100%;
-  margin: auto;
-  padding: 0;
-}
-
-.content-container {
-  width: 60%;
-  margin: auto;
-  padding: 0;
-  position: absolute;
-  top: 38%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+/*======================================
+/////////   log in screen   /////////////
+=======================================*/
 
 .login-icon {
   display: block;
@@ -40,120 +18,98 @@ p {
   width: 60%;
 }
 
-.login-button {
-  display: block;
-  margin: auto;
-  padding: 0.7em 1em 0.8em;
-  font-size: 15px;
-  color: #fff;
-  background-color: #3c90df;
-  border: 1px solid rgb(46, 123, 196);
-  text-decoration: none;
-  border-radius: 4px;
-  transition: background-color 0.25s ease;
+/*======================================
+///////////   Rates Page   /////////////
+=======================================*/
+
+.header__title {
+  margin: 20px 15px;
 }
 
-.login-button:hover {
-  background-color: rgb(46, 123, 196);
-  transition: background-color 0.25s ease;
+.table__title {
+  font-size: 25px;
+  margin: 0;
+  padding: 0;
 }
 
-.madeby {
-  margin: auto;
-  text-align: center;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: 15px;
-}
-
-.madeby a {
-  color: #0667d0;
-  text-decoration: none;
-}
-
-/*rates page*/
-
-.header {
-  padding: 0.9em 0 1em;
-  background-color: rgb(46, 123, 196);
-}
-
-.title {
-  font-size: 22px;
-  color: white;
-  display: inline;
-}
-
-.subtitle {
-  font-size: 20px;
-  color: #0667d0;
-  font-weight: 400;
-}
-
-.input {
-  text-align: center;
-  cursor: pointer;
-  display: inline;
-}
-
-.result-txt,
-.base-currency-txt {
-  font-size: 0.9em;
-  padding-right: 20px;
-  margin: 0 auto;
-  text-align: right;
-}
-
-.result-txt {
-  display: block;
-  width: 100px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.base-currency-value {
-  color: #9ba6b2;
-}
-
-.crypto-currency-name {
+.content-rates {
   text-align: left;
+  margin: 15px 10px;
+  border: 3px solid red;
+  padding: 5px;
 }
 
-.img {
-  width: 40px;
-  display: inline;
-}
-
-/* table */
-
-table {
-  width: 100%;
-}
-
-table,
-tr {
-  background-color: white;
+.table-rates {
   border-collapse: collapse;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  margin: 0 auto;
+  margin: 5px auto;
 }
 
-.table-row-subtitle {
-  height: 2.3em;
-  vertical-align: middle;
+.table-rates__row {
+  background-color: #eee;
+  border: none;
+  line-height: 2;
 }
 
-.table-row {
-  height: 2.6em;
+.table-rates__row td {
+  padding: 0;
 }
 
-.right {
-  text-align: right;
-  overflow: hidden;
-  width: 115px;
+.table-rates__row:nth-child(even) {
+  background-color: skyblue;
 }
-.hidden {
-  display: none;
+
+.table-rates__quantity {
+  text-align: center;
+  border-bottom: 1px solid;
+}
+
+.table-rates__equals {
+  padding: 0 15px !important;
+}
+
+/* accounts */
+.content-accounts {
+  text-align: left;
+  margin: 25px 10px;
+  border: 3px solid green;
+  padding: 5px;
+}
+
+.table-accounts {
+  border-collapse: collapse;
+  margin: 5px auto 15px;
+}
+
+.table-accounts__row {
+  background-color: skyblue;
+  border: none;
+  line-height: 2.5;
+}
+
+.placeholder {
+  display: inline;
+  margin: 0 10px;
+  width: 40px;
+}
+.table-accounts__equals {
+  padding: 0 15px;
+}
+
+/* Footer */
+.footer {
+  position: absolute;
+  right: 10px;
+  bottom: 5px;
+}
+
+.footer-menu {
+  list-style: none;
+  margin: 0;
+}
+
+.footer-menu__link {
+  display: inline-block;
+  line-height: 2;
+  padding: 0 15px;
+  border: 3px solid green;
 }
