--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,8 @@ body {
 =======================================*/
 
 #signinContent {
-height: 90%;
+  height: 90%;
+  background-color: #f3f3f3;
   position: relative;
   background-color: inherit;
   overflow: hidden;
@@ -24,6 +25,7 @@ height: 90%;
 .signin__icon {
   display: block;
   margin: auto;
+  margin-top: 37%;
   margin-bottom: 50px;
   width: 60%;
 }
@@ -35,9 +37,14 @@ height: 90%;
   font-family: sans-serif;
   display: inline-block;
   text-decoration: none;
-  border: 2px solid;
+  background-color: #0082ad;
+  transition: all .2s ease-in-out;
   border-radius: 4px;
   padding: 8px 40px;
+}
+
+.signin__button:hover {
+  background-color: #006b8e;
 }
 
 /*======================================
@@ -75,7 +82,7 @@ height: 90%;
 .table__currency {
   display: inline-block;
   position: relative;
-  right: -50px;
+  right: -82px;
 }
 
 .table__currency-toggle {
@@ -237,7 +244,7 @@ height: 90%;
 =======================================*/
 
 .about__modal {
-  transition: all 0.3s ease-in-out;
+  transition: all 0.5s ease-in-out;
   background-color: inherit;
   box-sizing: border-box;
   position: absolute;
